postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-0001-pg
  labels:
    name: client-0001-pg
spec:
  containers:
    - image: launcher.gcr.io/google/postgresql10
      name: postgres
      volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: client-0001-pg
---
apiVersion: v1
kind: Pod
metadata:
  name: client-0001-web
  labels:
    name: client-0001-web
  spec:
    containers:
      - name: jetti
        image: eu.gcr.io/jetti-pg/jetti
        ports:
          - containerPort: 8080
