sqlserver.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bcg-jetti
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bcg-jetti
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: bcg-jetti
        image: eu.gcr.io/jetti-pg/mssql
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: bcg-jetti
---
apiVersion: v1
kind: Service
metadata:
  name: bcg-jetti
spec:
  selector:
    app: bcg-jetti
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
# 0674476171
