bcd.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bcd
  labels:
    app: bcd
spec:
  template:
    metadata:
      labels:
        app: bcd
        tier: web
    spec:
      containers:
        - name: jetti
          image: eu.gcr.io/jetti-pg/jetti
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # The following environment variables will contain the database host,
          # user and password to connect to the PostgreSQL instance.
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
      # [END volumes]
---
apiVersion: v1
kind: Service
metadata:
  name: bcd
  labels:
    app: bcd
spec:
  type: NodePort
  selector:
    app: bcd
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcd-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bcd
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app: bcd
spec:
  tls:
  - secretName: jetti-ssl
  backend:
    serviceName: bcd
    servicePort: 8080
  rules:
  - host: bcd.jetti-app.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: bcd
          servicePort: 8080


#sed -ie "s/суббота, 13 января 2018 г. 21:31:39 (EET)/$(date)/g" add-account.yaml
