ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.10.10
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    k8s-app: nginx-ingress-lb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.11.0
          imagePullPolicy: Always
          args:
            - /nginx-ingress-controller
            - --default-backend-service=default/bcg
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcg-ingress
  labels:
    app: bcg
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: bcg
  labels:
    app: bcg
spec:
  tls:
    - secretName: jetti-ssl
      hosts:
        - bcg.jetti-app.com
  rules:
    - host: bcg.jetti-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: bcg
              servicePort: 80


#sed -ie "s/суббота, 13 января 2018 г. 21:31:39 (EET)/$(date)/g" add-account.yaml
#kubectl create secret generic mssql-db-credentials --from-literal=username=yuralex --from-literal=password=MyNew01Password
#kubectl apply -f bcg.yaml
